--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "eslint": "./node_modules/.bin/eslint ./",
     "test": "jest"
   },
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-html-to-pdf": "^1.3.0",
     "jest": "^27.4.7",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
