--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "cloudinary": "^1.28.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-html-to-pdf": "^1.3.0",
+    "formidable": "^2.0.1",
     "jest": "^27.4.7",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
